# visual-transformer-kinetic-keras

./: EUROSAT_Visual_Transformer.ipynb  README.md  keras_kinetic_multivariate_analysis_clustering_eurosat_.py  pyproject.toml
